# PromethAI-Backend

./: .env.template  Dockerfile  README.md  act.env.example  agent.py  api.py  assistant_templates.yaml  background.js  bla.py  chains.py  content.css  content.js  docker-compose.yml  entrypoint.sh  fetch_secret.py  main.py  main_chains.py  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  pyproject.toml  replacement_chains.py  shared_dependencies.md  test_api.py
.github/workflows/: cd.yaml  cd_dev.yaml  cd_prd.yaml
auth/: auth.py
bots/: Dockerfile  bot_extension.py  bot_loading_util.py  ff.yaml  mam.tf
bots/memory/clickhouse/: Dockerfile
examples/: level_1_pdf_vectorstore_dlt_etl.py  simple_ETLs.py
examples/level_1/: level_1_pdf_vectorstore_dlt_etl.py
examples/level_2/: .env.template  Readme.md  api.py  docker-compose.yml  level_2_pdf_vectorstore__dlt_contracts.py  pyproject.toml
extensions/: argparseext.py  dotenvext.py
fixtures/: choose_meal_tree_response.json  goal_response.json  recipe_response.json  subgoal_response.json  update_meal_tree_response.json
food_scrapers/: wolt_tool.py
heuristic_experience_orchestrator/: task_identification.py
llm_chains/: AbstractAgent.py  chains.py
memory/: MemoryManager.py
utils/: load_prod_redis.py  utils.py
validations/defaults/: categories_defaults.json  categories_input_defaults.json
validations/schema/: decompose_categories.json  decompose_categories_input.json
